[package]
name = "terminal-light"
version = "0.8.1"
edition = "2021"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/terminal-light"
description = "tells you whether your terminal is dark or light"
keywords = ["terminal", "light", "dark", "color"]
license = "MIT"
categories = ["command-line-interface"]
readme = "README.md"

[dependencies]
coolor = "0.5"
crossterm = "0.23.1"
thiserror = "1.0"

[target.'cfg(unix)'.dependencies]
xterm-query = { version = "0.1", git = "https://github.com/Canop/xterm-query", branch = "mio" }

[dev-dependencies]
crossterm = "0.23.1"

[patch.crates-io]
# coolor = { path = "../coolor" }
# crossterm = { path = "../crossterm" }

