[package]
name = "terminal-light"
version = "1.8.0"
edition = "2021"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/terminal-light"
description = "tells you whether your terminal is dark or light"
keywords = ["terminal", "light", "dark", "color"]
license = "MIT"
categories = ["command-line-interface"]
readme = "README.md"

[dependencies]
coolor = "1.1"
crossterm = "0.29"
thiserror = "1.0"

[target.'cfg(unix)'.dependencies]
xterm-query = "0.5"

[dev-dependencies]
crossterm = "0.29"

[patch.crates-io]
# coolor = { path = "../coolor" }
# crossterm = { path = "../crossterm" }
# xterm-query = { path = "../xterm-query" }

